# sourcestory

./: .pre-commit-config.yaml  README.md  TODO.md  pyproject.toml
.github/workflows/: ci.yml
doc/: architecture.md  technology-stack.md
sourcestory/: __init__.py  cli.py
sourcestory/formatter/: __init__.py
sourcestory/ingestion/: __init__.py
sourcestory/llm/: __init__.py
sourcestory/parsing/: __init__.py
sourcestory/templates/: book_chapter.j2  podcast.j2  readme.j2  summary.j2
tests/: __init__.py  test_cli.py  test_templates.py
