[build-system]
requires = ["setuptools >= 68.0", "setuptools-scm >= 8"]
build-backend = "setuptools.build_meta"

[project]
name = "sourcestory"
version = "0.1.0"
description = "Turning complex source code into engaging narratives."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "Leandro" }]
keywords = ["source-code", "narrative", "documentation", "llm", "code-explanation"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Documentation",
    "Topic :: Software Development :: Documentation",
    "Typing :: Typed",
]
dependencies = [
    "typer>=0.12",
    "rich>=13",
    "tree-sitter>=0.22",
    "tree-sitter-languages>=1.10",
    "gitpython>=3.1.33",
    "ollama>=0.2",
    "jinja2>=3.1",
]

[project.optional-dependencies]
llamacpp = ["llama-cpp-python>=0.2"]
hf = ["transformers>=4.40", "torch>=2.2"]
dev = [
    "ruff>=0.4",
    "mypy>=1.10",
    "pytest>=8",
    "pytest-cov>=5",
    "responses>=0.25",
    "pre-commit>=3",
]

[project.scripts]
sourcestory = "sourcestory.cli:app"

[project.urls]
Homepage = "https://github.com/lstasi/sourcestory"
Repository = "https://github.com/lstasi/sourcestory"
Issues = "https://github.com/lstasi/sourcestory/issues"

# ---------------------------------------------------------------------------
# Ruff
# ---------------------------------------------------------------------------
[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "TCH", # flake8-type-checking
    "RUF", # ruff-specific rules
]
ignore = [
    "E501",  # line-too-long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["sourcestory"]

# ---------------------------------------------------------------------------
# mypy
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = [
    "ollama.*",
    "tree_sitter.*",
    "tree_sitter_languages.*",
    "llama_cpp.*",
    "git.*",
]
ignore_missing_imports = true

# ---------------------------------------------------------------------------
# pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--strict-markers --tb=short"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks integration tests requiring external services",
]

# ---------------------------------------------------------------------------
# coverage
# ---------------------------------------------------------------------------
[tool.coverage.run]
source = ["sourcestory"]
omit = ["tests/*"]

[tool.coverage.report]
fail_under = 80
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.",
]
